# csv-diff

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: bench_csv_diff.rs
benches/bench_main/: Cargo.toml
benches/bench_main/src/: main.rs
benches/utils/: Cargo.toml
benches/utils/src/: csv_generator.rs  lib.rs
src/: csv.rs  csv_diff.rs  csv_hash_comparer.rs  csv_hash_receiver_comparer.rs  csv_hash_task_spawner.rs  csv_hasher.rs  csv_parse_result.rs  csv_parser_hasher.rs  diff_result.rs  diff_row.rs  lib.rs  thread_scope_strategy.rs
tests/: integration_test.rs
