[package]
name = "csv-diff"
version = "0.1.0"
authors = ["Jan Riemer <janriemer@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rayon = { version = "1.5", optional = true }
ahash = "0.6.2"
crossbeam-channel = "0.5"
smallvec = "1.6.1"
crossbeam-utils = { version = "0.8.3", optional = true }
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3"
utils = { path = "benches/utils" }

[features]
default = ["rayon-threads"]
rayon-threads = ["rayon"]

[[bench]]
name = "bench_csv_diff"
required-features = ["rayon-threads"]
harness = false
