[package]
name = "csv-diff"
version = "0.1.0-alpha"
authors = ["Jan Riemer <janriemer@tutanota.de>"]
description = "Compare two CSVs - with ludicrous speed 🚀."
edition = "2018"
documentation = "https://docs.rs/csv-diff"
readme = "README.md"
repository = "https://gitlab.com/janriemer/csv-diff"
homepage = "https://gitlab.com/janriemer/csv-diff"
license = "MIT OR Apache-2.0"
keywords = ["csv", "csv-diff", "diff", "difference", "compare"]
categories = ["encoding", "parser-implementations"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
csv = "1.1"
rayon = { version = "1.5", optional = true }
ahash = "0.6.2"
xxhash-rust = {version = "0.8.3", features = ["xxh3"]}
crossbeam-channel = "0.5"
smallvec = "1.6.1"
io-arc = "1.0.0"
crossbeam-utils = { version = "0.8.3", optional = true }
thiserror = "1.0.24"
mown = { version = "0.2.1", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3"
utils = { path = "benches/utils" }
scoped-pool = "1"

[features]
default = ["rayon-threads"]
rayon-threads = ["rayon", "mown"]
crossbeam-threads = ["crossbeam-utils"]

[[bench]]
name = "bench_csv_diff"
required-features = ["rayon-threads"]
harness = false
