[package]
name = "bench_main"
version = "0.1.0"
authors = ["Jan Riemer <janriemer@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
csv-diff = { path = "../..", features = ["rayon"]}
criterion = "0.3"
io-arc = "1.0.0"

# add more info for perf stats
[profile.release]
debug = true